# s1mple_c0mpute

./: .clang-format  CMakeLists.txt  LICENSE  README.md
bgr2gray/: CMakeLists.txt  bgr2gray.cu
convolution/: CMakeLists.txt  conv2d.py  conv2d_data_16x16.npy  conv2d_filter_5x5.npy  conv2d_output_16x16.npy  convolution.cu
cuda_basic/: CMakeLists.txt  main.cu
img_blur/: CMakeLists.txt  img_blur.cu
mat_mul/: CMakeLists.txt  mat_mul.cu  numpy_ref.py
query_device_properties/: CMakeLists.txt  query_device_properties.cu
vector_add/: CMakeLists.txt  vector_add.cu
